# playbook-creator

./: .clang-format  .gitignore  .gitpod.yml  .travis.yml  AGENTS.md  CMakeLists.txt  Doxyfile  README  README.md  RUST_MIGRATION_PLAN.md  appveyor.yml  build-boost.sh  build-botan.sh  build.sh  deploy.sh  innosetup.iss  vcpkg.json  version.py
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  msbuild.yml  release.yml
ci-scripts/: build-boost.sh  build-botan.sh
cmake/: pbcMacOSXBundleInfo.plist.in  pbcVersion.h.in
cmake/modules/: ConfigureMSVCRT.cmake  FindBotan.cmake  MunkeiVersionFromGit.cmake  REAME.md
doc/html/: annotated.html  classMainDialog-members.html  classMainDialog.html  classMainDialog__coll__graph.map  classMainDialog__coll__graph.md5  classMainDialog_a07bf9c63196e3734da8d55a3ac8d95d7_cgraph.map  classMainDialog_a07bf9c63196e3734da8d55a3ac8d95d7_cgraph.md5  classMainDialog_a2b31fc8d3c34d3805d85c60bfb493ef3_cgraph.map  classMainDialog_a2b31fc8d3c34d3805d85c60bfb493ef3_cgraph.md5  classMainDialog_a2b31fc8d3c34d3805d85c60bfb493ef3_icgraph.map  classMainDialog_a2b31fc8d3c34d3805d85c60bfb493ef3_icgraph.md5  classMainDialog_a567b1e30661d4bfbceb68dc79d5f8ba6_cgraph.map  classMainDialog_a567b1e30661d4bfbceb68dc79d5f8ba6_cgraph.md5  classMainDialog_a77c48e54c77429c2ccd312882fbb8314_cgraph.map  classMainDialog_a77c48e54c77429c2ccd312882fbb8314_cgraph.md5  classMainDialog_a77c48e54c77429c2ccd312882fbb8314_icgraph.map  classMainDialog_a77c48e54c77429c2ccd312882fbb8314_icgraph.md5  classMainDialog_a7ce9538f3910d024a5052f4dbcb8adae_cgraph.map  classMainDialog_a7ce9538f3910d024a5052f4dbcb8adae_cgraph.md5  classMainDialog_a8da35770b3156f7ed4372f80d253e035_cgraph.map  classMainDialog_a8da35770b3156f7ed4372f80d253e035_cgraph.md5  classMainDialog_a9f64cdb2db46aa45933e1b56649e0da5_cgraph.map  classMainDialog_a9f64cdb2db46aa45933e1b56649e0da5_cgraph.md5  classMainDialog_ac0233e5c20e5f57b724210bb8014dbfa_cgraph.map  classMainDialog_ac0233e5c20e5f57b724210bb8014dbfa_cgraph.md5  classMainDialog_ac61e42f39d9d59204ccd9ccab0c9e439_cgraph.map  classMainDialog_ac61e42f39d9d59204ccd9ccab0c9e439_cgraph.md5  classMainDialog_ac61e42f39d9d59204ccd9ccab0c9e439_icgraph.map  classMainDialog_ac61e42f39d9d59204ccd9ccab0c9e439_icgraph.md5  classMainDialog_adea34cbe23a50169683e4055f2f7d118_cgraph.map  classMainDialog_adea34cbe23a50169683e4055f2f7d118_cgraph.md5  classMainDialog_adea34cbe23a50169683e4055f2f7d118_icgraph.map  classMainDialog_adea34cbe23a50169683e4055f2f7d118_icgraph.md5  classPBCAbstractMovement-members.html  classPBCAbstractMovement.html  classPBCAbstractMovement__inherit__graph.map  classPBCAbstractMovement__inherit__graph.md5  classPBCCategory-members.html  classPBCCategory.html  classPBCCategory_1_1cpp.html  (+723 more)
doc/html/search/: all_0.js  all_1.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  related_0.js  (+12 more)
include/boost/detail/: endian.hpp
include/botan/: build.h
libpbc2/: Cargo.toml  build.rs
libpbc2/src/: bridge.rs  controller.rs  error.rs  lib.rs
libpbc2/src/bridge/: category.rs  controller.rs  formation.rs  mod.rs  play.rs  playbook.rs  route.rs  types.rs
libpbc2/src/models/: category.rs  default_playbook.rs  formation.rs  mod.rs  motion.rs  (+7 more)
manual/: pbcManual.tex
rust-helpers/: CMakeLists.txt  Cargo.toml  build.rs
rust-helpers/src/: lib.rs
src/: .gitignore  CMakeLists.txt  PlaybookCreator.pro  PlaybookCreator.pro.shared  main.cpp  mainDialog.cpp  mainDialog.h  mainDialog.ui  pbcController.cpp  pbcController.h  pbcVersion.h  pbcVersion.h.in
src/dialogs/: mainDialog.cpp  mainDialog.h  mainDialog.ui  pbcCreateMotionRouteDialog.cpp  pbcCreateMotionRouteDialog.h  pbcCreateMotionRouteDialog.ui  pbcCustomRouteDialog.cpp  pbcCustomRouteDialog.h  pbcCustomRouteDialog.ui  pbcDeleteDialog.cpp  pbcDeleteDialog.h  pbcDeleteDialog.ui  pbcEditCategoriesDialog.cpp  pbcEditCategoriesDialog.h  pbcEditCategoriesDialog.ui  pbcExportPdfDialog.cpp  pbcExportPdfDialog.h  pbcExportPdfDialog.ui  pbcNewPlayDialog.cpp  pbcNewPlayDialog.h  pbcNewPlayDialog.ui  pbcNewPlaybookDialog.cpp  pbcNewPlaybookDialog.h  pbcNewPlaybookDialog.ui  pbcOpenPlayDialog.cpp  pbcOpenPlayDialog.h  pbcOpenPlayDialog.ui  pbcSavePlayAsDialog.cpp  pbcSavePlayAsDialog.h  pbcSavePlayAsDialog.ui  pbcSetPasswordDialog.cpp  pbcSetPasswordDialog.h  pbcSetPasswordDialog.ui
src/gui/: pbcCustomRouteView.cpp  pbcCustomRouteView.h  pbcGridIronView.cpp  pbcGridIronView.h  pbcPathView.cpp  pbcPathView.h  pbcPathViewArrow.cpp  pbcPathViewArrow.h  pbcPlayView.cpp  pbcPlayView.h  pbcPlayerView.cpp  pbcPlayerView.h  pbcSettings.cpp  pbcSettings.h
src/models/: pbcAbstractMovement.h  pbcCategory.cpp  pbcCategory.h  pbcColor.cpp  pbcColor.h  pbcDataModel.cpp  pbcDefaultPlaybook.cpp  pbcFormation.h  pbcMotion.cpp  pbcMotion.h  pbcPath.cpp  pbcPath.h  pbcPlay.cpp  pbcPlay.h  pbcPlaybook.cpp  pbcPlaybook.h  pbcPlayer.cpp  pbcPlayer.h  pbcRoute.cpp  pbcRoute.h  pbcVirtualMovement.h
src/util/: pbcConfig.h  pbcDeclarations.h  pbcExceptions.h  pbcPositionTranslator.cpp  pbcPositionTranslator.h  pbcSingleton.h  pbcStorage.cpp  pbcStorage.h
test/: CMakeLists.txt  TestOffense.pbc  fuzzer.cpp  tests.cpp  tests.hpp
test/resources/StorageTests/: .gitignore  TestPlaybook1.pbc  TestPlaybook2.pbc
test/resources/StorageTests/VersionTestPlaybooks/: v0_12_0.pbc  v0_13_0.pbc  v0_14_1.pbc  v0_15_0.pbc  v0_18_0.pbc
tools/: .gitignore  checkStyle.py  cpplint.py
trunk/: README
trunk/src/: PlaybookCreator.pro  main.cpp  mainDialog.cpp  mainDialog.h  mainDialog.ui
updater/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
updater/src/: lib.rs
(+41 files in other folders)
