[package]
name = "pbc-updater"
version = "0.1.0"
authors = ["Oliver Braunsdorf <oliver.braunsdorf@gmx.de>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
self_update = "0.8.0"
semver = "0.9.0"

[build-dependencies]
cbindgen = "0.12.1"