[package]
name = "pbc-updater"
version = "0.1.0"
authors = ["Oliver Braunsdorf <oliver.braunsdorf@gmx.de>"]
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
self_update = "0.42.0"
semver = "1.0.27"
native-tls = "=0.2.16" # only need to define and pin this because self_update depends on it but it currently has an issue: https://github.com/rust-native-tls/rust-native-tls/issues/370

[build-dependencies]
cbindgen = "0.29.2"